Test controller's event browser